Fix : Made color modifications in scrollbar

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -24,13 +24,15 @@
     @apply bg-background text-foreground;
   }
 }
-/* width */
+
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 12px;
 }
- 
-/* Handle */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #65098E; 
+  border-radius: 10px;
+}
 ::-webkit-scrollbar-thumb {
-  background: #d500f9; 
+  background: #D926D9 ;
   border-radius: 10px;
 }
